# hexly

./: .gitignore  README.md  prototype.ipynb  pyproject.toml  usage.ipynb
.github/workflows/: ci.yml  ruff.yml
hexly/: __init__.py  config.py  encoding.py  header.html  hexview.py  style.css  templates.py
tests/: config_test.py  encoding_test.py  hexview_test.py
