[tool.poetry]
name = "hexly"
version = "0.0.3"
description = "A hex viewer for Jupyter notebooks"
authors = ["Shad Sharma <shadanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
